it seems to me that i've fixed sections overflow when switching them

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -34,7 +34,7 @@ html,
 body {
     padding: 0;
     margin: 0;
-    height: 100%;
+    // min-height: 100%;
 }
 
 html {
@@ -575,9 +575,6 @@ body {
 
 .quotes-section {
     min-height: 100vh;
-    max-height: -webkit-fit-content;
-    max-height: -moz-fit-content;
-    max-height: fit-content;
     width: 100%;
     position: absolute;
     left: 0;
@@ -608,7 +605,6 @@ body {
 .separator {
     position: relative;
     width: calc(100% - 22px);
-    // width: 100%;
     height: 2px;
     background-color: #4b4b4b;
     margin: 2.5em 0 2em;
